<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="281dp"
            android:layout_height="69dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edittextValue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_bias="0.384"
            android:hint="@string/input_value" />

    <TextView

            android:layout_width="349dp"
            android:layout_height="170dp"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"
            android:hint="@string/no_data_yet_in_shared_preference" />

    <Button
            android:text="@string/read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRead"
            android:backgroundTint="#3F51B5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.51"
            android:layout_marginBottom="24dp" />

    <Button
            android:text="@string/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:id="@+id/buttonCreate"
            app:layout_constraintTop_toBottomOf="@+id/edittextValue"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" />

    <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonUpdate"
            android:backgroundTint="#009688"
            app:layout_constraintTop_toBottomOf="@+id/edittextValue"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
            app:layout_constraintStart_toEndOf="@+id/buttonCreate"
            app:layout_constraintHorizontal_bias="0.568" />

    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDelete"
            android:backgroundTint="#F44336"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edittextValue"
            android:layout_marginTop="32dp" />
</androidx.constraintlayout.widget.ConstraintLayout>